tests/invalid/loops/statement_in_condition.rs
/*
fail: 1
*/

main(): int {
    while(a: int) {
        2;
    }
}